# Privacy-Preserving-Decision-Tree-2019

./: CMakeLists.txt  README.md  client_decision_tree.cpp  client_decision_tree.h  client_main.cpp  decision_tree.h  secret_sharing_efficient_tools.cpp  secret_sharing_efficient_tools.h  server_decision_tree.cpp  server_decision_tree.h  server_main.cpp  test_cloud_client.cpp  test_cloud_client.h  test_cloud_server.cpp  test_cloud_server.h  utils.h
